--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="col-lg-12">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>www.solomon-agbemenya.com</span>
+                    <span>www.solomonagbemenya.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+233 24 325 1339</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Accra, GHANA</span></li>
@@ -136,9 +136,9 @@
         <div class="row skills-content">
           <div class="col-lg-6">
             <div class="progress">
-              <span class="skill">Project Management<i class="val">100%</i></span>
+              <span class="skill">Project Management<i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -152,9 +152,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Business Consulting<i class="val">90%</i></span>
+              <span class="skill">Business Consulting<i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -168,16 +168,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">ISO 27001 and BCMS22301 Implementation <i class="val">90%</i></span>
+              <span class="skill">ISO 27001 and BCMS22301 Implementation <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">Risk Management <i class="val">90%</i></span>
+              <span class="skill">Risk Management <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -193,9 +193,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Thought Leadership <i class="val">90%</i></span>
+              <span class="skill">Thought Leadership <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -217,9 +217,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Market Research and Financial Analysis <i class="val">90%</i></span>
+              <span class="skill">Market Research and Financial Analysis <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -235,25 +235,12 @@
           <h2>Resume</h2>
           <p>Here you'll find a comprehensive overview of my professional journey, experiences, and the skills I've
             honed throughout
-            my career. As a highly motivated and customer-focused individual with a passion for strategic thinking and
+            my career. As a highly motivated individual with a passion for strategic thinking and
             organizational growth, I've accumulated a diverse skill set that enables me to drive business success and
             deliver
             impactful results.</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">Summary</h3>
-            <div class="resume-item pb-0">
-              <h4>Solomon Agbemenya</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
