--- a/index.html
+++ b/index.html
@@ -242,86 +242,76 @@
         </div>
           </div>
           <div class="col-lg-6">
+            <h3 class="resume-title">Awards & Acheievments</h3>
+            <div class="resume-item">
+              <h4>Service Award, Exemplary Leader </h4>
+              <h5>2023 - Fido</h5>
+               <div class="resume-item">
+              <h4>Service Excellence Award, Strategy & Exevcution </h4>
+              <h5>2021 - First Atlantic Bank</h5>
+                  <div class="resume-item">
+              <h4>Exceptional Service Delivery, Letter of Commendation </h4>
+              <h5>2021 - First Atlantic Bank</h5>
+                     <div class="resume-item">
+              <h4>Author, Optimizing Your Business Operations </h4>
+              <h5>2021 </h5>
+             
+                
+          </div>
+          <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Director, Strategy & Business Consulting</h4>
               <h5>Feb 2024 - Present</h5>
-              <p><em>Accra, Ghana </em></p>
+              <p><em>S&D, Accra, Ghana </em></p>
               <ul>
-                <li>Lead the development of strategic plans, business models, and growth strategies for clients across
+                <li>Leading the development of strategic plans, business models, and growth strategies for clients across
                   various industries.</li>
-                <li>Collaborate with clients to define strategic objectives, priorities, and key performance indicators
+                <li>Collaborating with clients to define strategic objectives, priorities, and key performance indicators
                   (KPIs).</li>
-                <li>Serve as the primary point of contact and trusted advisor for client engagements, building and
+                <li>Serving as the primary point of contact and trusted advisor for client engagements, building and
                   maintaining strong
                   relationships.</li>
-                <li>Understand clients' business needs, challenges, and goals to deliver tailored solutions and
+                <li>Understanding clients' business needs, challenges, and goals to deliver tailored solutions and
                   value-added services.</li>
               </ul>
             </div>
-            <div class="resume-item">
-              <h4>Fido Ghana, Head of Wallets</h4>
-              <h5>May 2022 to Feb 2023</h5>
-              <p><em>Fido Ghana, Accra, Ghana</em></p>
-              <ul>
-                <li>Support Product & Services development and implementation in line with Go-to-market strategy in
-                  collaboration with the
-                  Products & Service team.</li>
-                <li>Work with support teams across all related divisions and functions to ensure product and service
-                  deployment post a POC</li>
-                <li>Lead process efficiency and optimization to achieve cost savings</li>
-                <li>Effectively manage product/service POC implementation and User
-                  Acceptance Testing</li>
-              </ul>
             </div>
             <div class="resume-item">
               <h4>Head of Business Development</h4>
               <h5>March 2023 - Feb 2024</h5>
-              <p><em>Fido Ghana, Accra, Ghana</em></p>
+              <p><em>Fido, Accra, Ghana</em></p>
               <ul>
-                <li>Setting up Fido’s Wallet business in Ghana: growth, hiring, regulation,
-                  business development and operations.</li>
-                <li>Develop savings product in collaboration with a regulated institution</li>
-                <li>Launch payments product in collaboration with a Payments Services Provider</li>
-                <li>Incubate and develop Fido’s product and drive growth strategy.</li>
+                <li>Local point of contact in raising +GHS20M in invester funds </li>
+                <li>Researched and developed a Mobile Device financing product</li>
+                <li>Led the development and launch of a new USSD Channel *998#</li>
+                <li>Closed a Savings partnership deal with Stanbic Bank Ghana</li>
+                <li>Signed partnership deal with Hubtel for Payments product colloboration</li>
+                <li>Arranged and led the partnership deal with Jumia Ghana for Mobile Device Financing</li>
+                <li>Launched a Financial Literacy Program dubbed Fido Money Matters</li>
+                <li>Arranged and closed a collaboration with Harvard Business School for the Field Global Immersion program</li>
+                <li>Closed partnership deal with Enterprise Life</li>
+                <li>Facilitated partnership with Adehyeman Savings & Loans</li>
+                <li>Closed partnership with Lancaster University</li>
+                <li>Led the development and launch of Special Investment Plan</li>
+                <li>Led and closed a partnership deal with Cellulant</li>
+                <li>Saved Fido +GH1M in collection charges in new payments services provider collaboration </li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Head of Wallets</h4>
-              <h5>March 2023 - Feb 2024</h5>
+              <h5>May 2022 - Feb 2023</h5>
               <p><em>Fido Ghana, Accra, Ghana</em></p>
               <ul>
-                <li>Setting up Fido’s Wallet business in Ghana: growth, hiring, regulation,
+                <li>Led a team to implement and certify Fido to ISO27001 Standards.</li>
+                <li>Led the Setup of Fido’s intended Wallet business in Ghana including, hiring, regulation,
                   business development and operations.</li>
-                <li>Develop savings product in collaboration with a regulated institution</li>
-                <li>Launch payments product in collaboration with a Payments Services Provider</li>
-                <li>Incubate and develop Fido’s product and drive growth strategy.</li>
+                <li>Signed a savings product development in collaboration with Stanbic Bank Ghana</li>
+                <li>Launched a payments product in collaboration with a Payments Services Provider</li>
+                <li>Led the development of Savings Backed loan product in partnership with Old Mutual Ghana</li>
               </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Team Lead, Strategy & Business Optimization Department</h4>
-              <h5>April 2015 - April 2022</h5>
-              <p><em>First Atlantic Bank, Accra, Ghana</em></p>
-              <ul>
-                <li>Key resource to annual audit and recertification to PCIDSS and ISO27001 standards.</li>
-                <li>Constantly research continued relevance of strategies and recommend changes when necessary in
-                  accordance with
-                  prevailing realities.</li>
-                <li>Contributed to the development of corporate publications, e.g., Annual Report, Board papers, etc.
-                </li>
-                <li>Support business units in developing strategies aligned to and cascaded from the overall corporate
-                  objectives.
-                </li>
-                <li>Evaluated business fundamentals, industry trends (local and global), market performance and
-                  strategic
-                  opportunities to enable the Bank meet its short-, medium- and long-term goals and objectives.</li>
-                <li>Monitor the implementation of initiatives that support the enterprise’s vision and direction.</li>
-                <li>Provide support towards Management Team Retreat</li>
-                <li>Key stakeholder in the project team to successfully execute a number of projects, notable are: Banks
-                  mobile and
-                  USSD applications, Customer Relationship Manager System, Setup of the banks Contact Centre.</li>
-              </ul>
-            </div>
+
+               </div>
             <div class="resume-item">
               <h4>Acting Head, Project Management Office</h4>
               <h5>April 2021 - November 2021</h5>
@@ -338,6 +328,29 @@
                   IT software and other IT related products.</li>
               </ul>
             </div>
+            </div>
+            <div class="resume-item">
+              <h4>Team Lead, Strategy & Business Optimization Department</h4>
+              <h5>April 2015 - April 2022</h5>
+              <p><em>First Atlantic Bank, Accra, Ghana</em></p>
+              <ul>
+                <li>Developed the Digital Strategy for the bank with an expected net revenue of +USD30M.</li>
+                <li>Key resource to annual audit and recertification to PCIDSS and ISO27001 standards.</li>
+                <li>Contributed to the development of corporate publications, e.g., Annual Report, Board papers, etc.
+                </li>
+                <li>Supported business units in developing strategies aligned to and cascaded from the overall corporate
+                  objectives.
+                </li>
+                <li>Evaluated business fundamentals, industry trends (local and global), market performance and
+                  strategic
+                  opportunities to enable the Bank meet its short-, medium- and long-term goals and objectives.</li>
+                <li>Monitored the implementation of initiatives that supported the organisations vision and direction.</li>
+                <li>Provided support towards Management Team Retreat</li>
+                <li>Drafted, signed off and implemented 57 ISMS policies, 71 frameworks and 12 operational manuals in line with ISO27001 standards</li>
+                <li>Key stakeholder in the project team that successfully executed a number of projects, notable are: Banks
+                  mobile and USSD applications, Customer Relationship Manager System, Setup of the banks Contact Centre.</li>
+              </ul>
+          </div>
             <div class="resume-item">
               <h4>Process Modeler</h4>
               <h5>September 2013 - March 2015</h5>
@@ -368,7 +381,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Acting Head, Project Management Office</h4>
+              <h4>Internship/h4>
               <h5>January 2012 - April 2012</h5>
               <p><em>Barclays Bank Ghana Limited, Accra, Ghana</em></p>
               <ul>
@@ -402,15 +415,12 @@
               <h4>Competence In Lean Theory; Application of Lean Improvement Methods</h4>
               <h5>2018</h5>
               <p>Course Content: Lean Philosophy and Key Concepts, Lean Tools and Techniques, Applying Lean in the
-                Services Sector, The
-                University of St. Andrews 8 Step Lean Model</p>
+                Services Sector, The University of St. Andrews 8 Step Lean Model</p>
             </div>
             <div class="resume-item">
               <h4>LEAN SIX SIGMA PROFESSIONAL, Edu Pristine (USA)</h4>
               <h5>2016</h5>
-              <p>Course Content: Lean Philosophy and Key Concepts, Lean Tools and Techniques, Applying Lean in the
-                Services Sector, The
-                University of St. Andrews 8 Step Lean Model</p>
+              <p>Course Content: Lean Philosophy and Key Concepts, Lean Tools and Techniques, Applying DMAIC and DMADV improvement strategies
             </div>
             <div class="resume-item">
               <h4>BSC, Banking and Finance</h4>
@@ -437,7 +447,7 @@
               <p><em>IPMC, Accra, Ghana</em></p>
             </div>
             <div class="resume-item">
-              <h4>W.A.S.S.C.E, General Science</h4>
+              <h4>W.A.S.S.C.E, Biological Science option</h4>
               <h5>2005 - 2008</h5>
               <p><em>Accra Academy, Accra, Ghana</em></p>
             </div>
