--- a/index.html
+++ b/index.html
@@ -244,22 +244,22 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Awards & Acheievments</h3>
             <div class="resume-item">
-              <h4>Service Award, Exemplary Leader </h4>
+            <h4>Service Award, Exemplary Leader </h4>
               <h5>2023 - Fido</h5>
-               <div class="resume-item">
-              <h4>Service Excellence Award, Strategy & Exevcution </h4>
+            <div class="resume-item">
+            <h4>Service Excellence Award, Strategy & Exevcution </h4>
               <h5>2021 - First Atlantic Bank</h5>
-                  <div class="resume-item">
-              <h4>Exceptional Service Delivery, Letter of Commendation </h4>
+            <div class="resume-item">
+            <h4>Exceptional Service Delivery, Letter of Commendation </h4>
               <h5>2021 - First Atlantic Bank</h5>
-                     <div class="resume-item">
-              <h4>Author, Optimizing Your Business Operations </h4>
+            <div class="resume-item">
+            <h4>Author, Optimizing Your Business Operations </h4>
               <h5>2021 </h5>
              
                 
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+        </div>
+         <div class="col-lg-6">
+          <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Director, Strategy & Business Consulting</h4>
               <h5>Feb 2024 - Present</h5>
@@ -381,7 +381,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Internship/h4>
+              <h4>Internship</h4>
               <h5>January 2012 - April 2012</h5>
               <p><em>Barclays Bank Ghana Limited, Accra, Ghana</em></p>
               <ul>
