--- a/index.html
+++ b/index.html
@@ -245,16 +245,16 @@
             <h3 class="resume-title">Awards & Acheievments</h3>
           <div class="resume-item">
             <h4>Service Award, Exemplary Leader </h4>
-              <h5>2023 - Fido</h5>
+            <h5>2023 - Fido</h5>
           <div class="resume-item">
             <h4>Service Excellence Award, Strategy & Exevcution </h4>
-              <h5>2021 - First Atlantic Bank</h5>
+            <h5>2021 - First Atlantic Bank</h5>
           <div class="resume-item">
             <h4>Exceptional Service Delivery, Letter of Commendation </h4>
-              <h5>2021 - First Atlantic Bank</h5>
+            <h5>2021 - First Atlantic Bank</h5>
           <div class="resume-item">
             <h4>Author, Optimizing Your Business Operations </h4>
-              <h5>2021 </h5>
+            <h5>2021 </h5>
              
                 
         </div>
@@ -564,13 +564,26 @@
               </div>
             </div>
 
+              <div class="swiper-slide">
+              <div class="testimonial-item">
+                <h3>Tavona Biza</h3>
+                <h4>CEO, Old Mutual Ghana</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Solomon has been spot on in his deliverables. His work ethics and energy are admirable. When there are delays in a project, 
+                  he tactically reaches out to me to engage the team to ensure we are back on track. He has great interpersonal skills as well.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <h3>Augustina Amakye</h3>
                 <h4>Board Member, First Atlantic Bank</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  We would like to thank you all for your dedication anad hard worh in making sure that the digital
+                  We would like to thank Solomon and you all for your dedication and hard work in making sure that the digital
                   retreat was a success.
                   The Board was MORE than impressed with all our presentations and appreciated the effort that went in
                   to get this done
