--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Solomon Sedinam Agbemenya <br> PMP, CPMC, LSSGB/BB, MBA TQM, BSC, ISO27001, BCMS22301</h1>
+      <h1>Solomon Sedinam Agbemenya <br> </h1>
       <p>I'm <span class="typed"
-          data-typed-items="skilled in Brand Strategy Development & Positioning, experienced in Change Management, proficient in Project Management, adept at Research, knowledgeable in Process Analysis and Modelling"></span>
+          data-typed-items="PMP, CPMC, LSSGB/BB, MBA TQM, BSC, ISO27001, BCMS22301"></span>
       </p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
