--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Solomon Sedinam Agbemenya <br> </h1>
-      <p>"PMP, CPMC, LSSGB/BB, MBA TQM, BSC, ISO27001, BCMS22301"<span class="typed"
-          data-typed-items=></span>
+      <p>"PMP, CPMC, LSSGB/BB, MBA TQM, BSC, ISO27001, BCMS22301"<span></span>
       </p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
