--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Awards & Acheievments</h3>
+            <h3 class="resume-title">Awards & Achievements</h3>
           <div class="resume-item">
             <h4>Service Award, Exemplary Leader </h4>
             <h5>2023 - Fido</h5>
