--- a/index.html
+++ b/index.html
@@ -416,12 +416,14 @@
         <div class="resume-item">
           <h4>Competence In Lean Theory; Application of Lean Improvement Methods</h4>
           <h5>2018</h5>
+          <p><em>The University of St. Andrews 8 Step Lean Model</em></p>
           <p>Course Content: Lean Philosophy and Key Concepts, Lean Tools and Techniques, Applying Lean in the
-            Services Sector, The University of St. Andrews 8 Step Lean Model</p>
+            Services Sector</p>
         </div>
         <div class="resume-item">
-          <h4>LEAN SIX SIGMA PROFESSIONAL, Edu Pristine (USA)</h4>
+          <h4>LEAN SIX SIGMA PROFESSIONAL</h4>
           <h5>2016</h5>
+           <p><em>Edu Pristine (USA)</em></p>
           <p>Course Content: Lean Philosophy and Key Concepts, Lean Tools and Techniques, Applying DMAIC and DMADV
             improvement strategies
         </div>
