--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>Solomon S. Agbemenya - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -256,6 +256,50 @@
           <div class="resume-item">
             <h4>Author, Optimizing Your Business Operations </h4>
             <h5>2021 </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Winner, International Men Cooking Contest  </h4>
+            <h5>2019 - First Atlantic Bank </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Nominee, Forty Under 40 Awards </h4>
+            <h5>2019 </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Runner Up, Young Entrepreneurs Award</h4>
+            <h5>2018 </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Winner, Strongest Man Challenge</h4>
+            <h5>2018 - First Atlantic Bank </h5>
+          </div>
+          <div class="resume-item">
+            <h4>2nd Runner Up, Strategy Idea Challenge</h4>
+            <h5>2016 - First Atlantic Bank </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Best Dressed Gentleman, AU Day Celebrations</h4>
+            <h5>2016 - First Atlantic Bank </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Top 5 Winners, Master Card Promotions</h4>
+            <h5>2016 - First Atlantic Bank </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Citation, Dedication Service to God & Humanity</h4>
+            <h5>2015 - Evangelical Presbyterian Church General Council </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Ayekoo Card, Servant Leadership</h4>
+            <h5>2014 - Barclays Bank Ghana </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Award, Selfless Service</h4>
+            <h5>2012 - Central University </h5>
+          </div>
+          <div class="resume-item">
+            <h4>Citation, Exemplary Leadership</h4>
+            <h5>2009 - Central University </h5>
           </div>
         </div>
         <div class="col-lg-6">
