--- a/index.html
+++ b/index.html
@@ -135,48 +135,48 @@
         <div class="row skills-content">
           <div class="col-lg-6">
             <div class="progress">
-              <span class="skill">Project Management<i class="val">95%</i></span>
+              <span class="skill">Project Management<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Brand Strategy Development & Execution<i class="val">90%</i></span>
+              <span class="skill">Brand Strategy Development & Execution<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Business Consulting<i class="val">95%</i></span>
+              <span class="skill">Business Consulting<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Process Improvement & Re-engineering <i class="val">90%</i></span>
+              <span class="skill">Process Improvement & Re-engineering <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">ISO 27001 and BCMS22301 Implementation <i class="val">85%</i></span>
+              <span class="skill">ISO 27001 and BCMS22301 Implementation <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">Risk Management <i class="val">80%</i></span>
+              <span class="skill">Risk Management <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -184,41 +184,41 @@
 
           <div class="col-lg-6">
             <div class="progress">
-              <span class="skill">Documentation of Policies <i class="val">90%</i></span>
+              <span class="skill">Documentation of Policies <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Thought Leadership <i class="val">80%</i></span>
+              <span class="skill">Thought Leadership <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Quality Management <i class="val">90%</i></span>
+              <span class="skill">Quality Management <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Product & Services Development <i class="val">90%</i></span>
+              <span class="skill">Product & Services Development <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Market Research and Financial Analysis <i class="val">80%</i></span>
+              <span class="skill">Market Research and Financial Analysis <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -246,7 +246,7 @@
             <h5>2023 - Fido</h5>
           </div>
           <div class="resume-item">
-            <h4>Service Excellence Award, Strategy & Exevcution </h4>
+            <h4>Service Excellence Award, Strategy & Execution </h4>
             <h5>2021 - First Atlantic Bank</h5>
           </div>
           <div class="resume-item">
@@ -294,7 +294,7 @@
             <h5>2014 - Barclays Bank Ghana </h5>
           </div>
           <div class="resume-item">
-            <h4>Award, Selfless Service</h4>
+            <h4>Award, Selfless Service & Commitment</h4>
             <h5>2012 - Central University </h5>
           </div>
           <div class="resume-item">
@@ -400,7 +400,19 @@
             </ul>
           </div>
           <div class="resume-item">
-            <h4>Process Modeler</h4>
+            <h4>Publisher & Editor-In-Chief</h4>
+            <h5>April 2013 to date</h5>
+            <p><em>El-Evangel Publications, Accra, Ghana</em></p>
+            <ul>
+              <li>Designed and Plubished Top Fintech Voices Magazine.</li>
+              <li>Desiged and Published 7 ediitons of the Evangel Magazine</li>
+              <li>Designed and Published TheKidz Magazine</li>
+              <li>Designed and Published OWS Magazine</li>
+              <li>Published "Unleash the Gold Within</li>
+              <li>Designed and Published The Torch Magazine</li>
+              <li>Developed several concepts and events including: Baby Olympics, Creative Writing Contest, Streetz Unleashed</li>
+          <div class="resume-item">
+            <h4>Process Modeller</h4>
             <h5>September 2013 - March 2015</h5>
             <p><em>Barclays Bank Ghana Limited, Accra, Ghana</em></p>
             <ul>
@@ -505,7 +517,23 @@
           <h5>2002 - 2005</h5>
           <p><em>St Martin de Porres School, Accra, Ghana</em></p>
         </div>
-
+ <div class="col-lg-6">
+          <h3 class="resume-title">Public Speaking Engagements</h3>
+          <div class="resume-item">
+            <li>Positive Movement Conference</li>
+            <li>Reset Conference</li>
+            <li>Career Selecting Conference</li>
+            <li>The Zone - Uncovered</li>
+            <li>Your Career Journey</li>
+            <li>Purposeful Summit</li>
+            <li>Audience With Solomon Sedinam</li>
+            <li>Wolf Couture IG Live</li>
+            <li>AfCFTA & SMEs- Opportunities for Scaling Up and Digitized Trade</li>
+            <li>Mest Boot Camp</li>
+            <li>Fintech Breakfast Meeting</li>
+            <li>MX24 Tv Lifestyle daily show</li>
+            <li>EPCG Youth Week</li>
+            <li>Afropark Networking Event</li>
       </div>
     </section>
 
