--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@
               <li>Published "Unleash the Gold Within</li>
               <li>Designed and Published The Torch Magazine</li>
               <li>Developed several concepts and events including: Baby Olympics, Creative Writing Contest, Streetz Unleashed</li>
+            </ul>
+          </div>
           <div class="resume-item">
             <h4>Process Modeller</h4>
             <h5>September 2013 - March 2015</h5>
