--- a/index.html
+++ b/index.html
@@ -795,10 +795,10 @@
             class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Solomon Agbemenya</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="Sedem Amekpewu</a>
       </div>
     </div>
   </footer>
