--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
         &copy; Copyright <strong><span>Solomon Agbemenya</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="Sedem Amekpewu</a>
+        Designed by Sedem Amekpewu
       </div>
     </div>
   </footer>
