--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>solomon.agbemenya@gmail.com</span>
+                    <span>solomon.agbemenya@sanddca.com/solomon.agbemenya@gmail.com</span>
                   </li>
                 </ul>
               </div>
@@ -461,7 +461,6 @@
         <h3 class="resume-title">Education</h3>
         <div class="resume-item">
           <h4>MBA, Total Quality Management</h4>
-          <h5>2017 - 2019</h5>
           <p><em>University of Professional Studies, Accra, Ghana</em></p>
           <p>Course Content: Quality Planning and Assurance, Production and Operations Management, Quality
             Management Systems Audit,
@@ -473,22 +472,19 @@
         </div>
         <div class="resume-item">
           <h4>Competence In Lean Theory; Application of Lean Improvement Methods</h4>
-          <h5>2018</h5>
           <p><em>The University of St. Andrews 8 Step Lean Model</em></p>
           <p>Course Content: Lean Philosophy and Key Concepts, Lean Tools and Techniques, Applying Lean in the
             Services Sector</p>
         </div>
         <div class="resume-item">
           <h4>LEAN SIX SIGMA PROFESSIONAL</h4>
-          <h5>2016</h5>
            <p><em>Edu Pristine (USA)</em></p>
           <p>Course Content: Lean Philosophy and Key Concepts, Lean Tools and Techniques, Applying DMAIC and DMADV
             improvement strategies
         </div>
         <div class="resume-item">
           <h4>BSC, Banking and Finance</h4>
-          <h5>2009 - 2013</h5>
-          <p><em>Central University College, Accra, Ghana</em></p>
+          <p><em>Central University, Accra, Ghana</em></p>
           <p>Course Content: Accounting Foundation, Introduction to Economics, Quantitative techniques, Computer
             Literacy,
             Communication Skills, French, Principles for Purposeful Living, Foundations of Management, Management
@@ -509,16 +505,7 @@
           <h5>2008 - 2009</h5>
           <p><em>IPMC, Accra, Ghana</em></p>
         </div>
-        <div class="resume-item">
-          <h4>W.A.S.S.C.E, Biological Science option</h4>
-          <h5>2005 - 2008</h5>
-          <p><em>Accra Academy, Accra, Ghana</em></p>
-        </div>
-        <div class="resume-item">
-          <h4>B.E.C.E</h4>
-          <h5>2002 - 2005</h5>
-          <p><em>St Martin de Porres School, Accra, Ghana</em></p>
-        </div>
+
  <div class="col-lg-6">
           <h3 class="resume-title">Public Speaking Engagements</h3>
           <div class="resume-item">
