--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Solomon Sedinam Agbemenya <br> </h1>
-      <p>"PMP, CPMC, LSSGB/BB, MBA TQM, BSC, ISO27001, BCMS22301"<span></span>
+      <p>"PMP, CPMC, LSSGB/BB, ISO27001 LI, BCMS22301 LI, EIC"<span></span>
       </p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -325,8 +325,8 @@
             <h5>March 2023 - Feb 2024</h5>
             <p><em>Fido, Accra, Ghana</em></p>
             <ul>
-              <li>Local point of contact in raising +GHS20M in invester funds </li>
-              <li>Researched and developed a Mobile Device financing product</li>
+              <li>Local point of contact in raising +GHS18M in invester funds </li>
+              <li>Researched and developed the framework for Mobile Device financing product</li>
               <li>Led the development and launch of a new USSD Channel *998#</li>
               <li>Closed a Savings partnership deal with Stanbic Bank Ghana</li>
               <li>Signed partnership deal with Hubtel for Payments product colloboration</li>
@@ -335,12 +335,13 @@
               <li>Arranged and closed a collaboration with Harvard Business School for the Field Global Immersion
                 program
               </li>
-              <li>Closed partnership deal with Enterprise Life</li>
+              <li>Closed partnership deal on Credit Life with Enterprise Life</li>
               <li>Facilitated partnership with Adehyeman Savings & Loans</li>
               <li>Closed partnership with Lancaster University</li>
-              <li>Led the development and launch of Special Investment Plan</li>
+              <li>Led and closed partnership with Old Mutual Ghana
+              <li>Led the development and launch of Special Investment Plan product</li>
               <li>Led and closed a partnership deal with Cellulant</li>
-              <li>Saved Fido +GH1M in collection charges in new payments services provider collaboration </li>
+              <li>Saved Fido close to GHS1M in collection charges in new payments services provider collaboration </li>
             </ul>
           </div>
           <div class="resume-item">
@@ -502,7 +503,6 @@
         </div>
         <div class="resume-item">
           <h4>Microsoft Certified Professional, (Graphics & Web Designing)</h4>
-          <h5>2008 - 2009</h5>
           <p><em>IPMC, Accra, Ghana</em></p>
         </div>
 
