--- a/index.html
+++ b/index.html
@@ -76,18 +76,13 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a highly motivated and customer-focused individual with excellent analytical, communication, and
-            managerial
-            skills
-            seeking to use my depth of knowledge and application towards organizational growth and adding bottom line
-            profits.
-            My goal is to use my experience as a strategist, quality enthusiast and project manager to drive business
-            decision
-            making and bring my depth of knowledge and critical thinking to creating a more aligned strategic-fit
-            within
-            organizations; particularly in the areas of business growth, quality improvement, business process
-            transformation,
-            efficient project delivery and overall customer satisfaction.
+          <p>I am a highly motivated and results-oriented individual with excellent analytical, communication, and
+            managerial skills seeking to use my depth of knowledge and application towards organizational growth and 
+            adding bottom line profits. I have used my experience as a strategist, quality enthusiast, 
+            process optimisation expert and project manager to drive business decision
+            making and bring my depth of knowledge and critical thinking to organisations; particularly in the areas of 
+            product development, business growth, quality improvement, business process
+            transformation, strategy monitoring & execution, efficient project delivery and overall customer satisfaction.
           </p>
         </div>
 
