--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>solomon.agbemenya@sanddca.com/solomon.agbemenya@gmail.com</span>
+                    <span>solomon.agbemenya@sanddca.com</span>
+                    <span>solomon.agbemenya@gmail.com</span>
                   </li>
                 </ul>
               </div>
