--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                     <span>solomon.agbemenya@sanddca.com</span>
-                    <span>solomon.agbemenya@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>:</strong> <span>solomon.agbemenya@gmail.com</span>
                   </li>
                 </ul>
               </div>
